--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -16,7 +16,7 @@ variables:
   dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
   tag: '$(Build.BuildId)'
   k8sconnection: cluster1
-  k8sNamespace: walmartdev
+  k8sNamespace: default
   imagePullSecret: test
 
   # Agent VM image name
