--- a/manifests/Service.yaml
+++ b/manifests/Service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: walmartpaymentservice
-  namespace: walmart
+  namespace: walmartdev
 spec:
   selector:
     app: walmartpayment-dev
