--- a/manifests/secrets.yaml
+++ b/manifests/secrets.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mysecret
-  namespace: walmart
+  namespace: walmartdev
 type: Opaque
 data:
   # Example:
