--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -26,7 +26,7 @@ spec:
           # - Each init container must complete successfully before the next one starts.
       containers:
       - name:  walmartpayment-dev
-        image:  azacrshared.azurecr.io/walmartdev/trhemaazurepipeline:latest
+        image:  walmartdev.azurecr.io/trhemaazurepipeline:latest
         resources:
           requests:
             cpu:  100m
@@ -56,4 +56,6 @@ spec:
         - containerPort:  80
           name:  walmartdev
         imagePullPolicy: Always
+      imagePullSecrets:
+        - name: secrete
       restartPolicy: Always
